[tool.poetry]
name = "p115client"
version = "0.0.8.4.3"
description = "Python 115 webdisk client."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client"
repository = "https://github.com/ChenyangGao/p115client"
documentation = "https://p115client.readthedocs.io"
keywords = ["115", "webdisk", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
cachedict = ">=0.0.7"
ed2k = ">=0.0.2.2"
errno2 = ">=0.0.5"
glob_pattern = ">=0.0.2"
http_client_request = ">=0.1.3.1"
http_response = ">=0.0.9"
httpcore_request = ">=0.0.7.1"
id2dirnode = ">=0.0.2"
integer_tool = ">=0.0.6"
iter_collect = ">=0.0.6"
iterdir = ">=0.0.10"
orjson = "*"
p115cipher = ">=0.0.4"
p115oss = ">=0.0.9"
p115pickcode = ">=0.0.5.4"
posixpatht = ">=0.0.4"
python-argtools = ">=0.0.2"
python-asynctools = ">=0.1.3.4"
python-concurrenttools = ">=0.1.4"
python-cookietools = ">=0.1.4"
python-dictattr = ">=0.0.4"
python-dicttools = ">=0.0.5"
python-download = ">=0.0.4"
python-encode_uri = ">=0.0.3"
python-ensure = ">=0.0.1"
python-filewrap = ">=0.2.9"
python-hashtools = ">=0.0.6"
python-httpfile = ">=0.0.5.4"
python-http_request = ">=0.1.7.1"
python-iterutils = ">=0.2.10.2"
python-property = ">=0.0.3"
python-startfile = ">=0.0.2.1"
python-temporary = ">=0.0.1"
python-undefined = ">=0.0.4"
qrcode = "*"
sqlitetools = ">=0.0.7"
yarl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115client"
