[tool.poetry]
name = "python-115"
version = "0.0.9.9"
description = "Python 115 client and filesystem."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/python-115"
repository = "https://github.com/ChenyangGao/python-115"
keywords = ["115", "client"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 4 - Beta",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
glob_pattern = ">=0.0.2"
httpcore_request = ">=0.0.6.4"
magnet2torrent = "*"
orjson = "*"
p115client = ">=0.0.7.5"
posixpatht = ">=0.0.4"
python-asynctools = ">=0.0.7"
python-concurrenttools = ">=0.0.3"
python-dictattr = ">=0.0.4"
python-download = ">=0.0.3"
python-filewrap = ">=0.2.6"
python-hashtools = ">=0.0.3.3"
python-httpfile = ">=0.0.4"
python-http_request = ">=0.0.6"
python-iterutils = ">=0.2.4.1"
python-texttools = ">=0.0.2"
python-urlopen = ">=0.0.6"
python-undefined = "*"
rich = "*"
yarl = "*"

[tool.poetry.scripts]
p115 = "p115.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115"
