[tool.poetry]
name = "p115dav"
version = "0.0.10.3"
description = "115 网盘 WebDAV 和 302 直链程序."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115dav"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115dav"
keywords = ["python-115", "webdav"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
a2wsgi = ">=1.10.7"
blacksheep = "*"
cachedict = ">=0.0.6"
httpagentparser = "*"
orjson = "*"
p115client = ">=0.0.5.18"
p115pickcode = ">=0.0.5.4"
path_predicate = ">=0.0.1.1"
posixpatht = ">=0.0.3"
pysubs2 = "*"
python-dictattr = ">=0.0.4"
python-encode_uri = ">=0.0.3"
python-property = ">=0.0.3"
python-sqlitedict = ">=0.0.1.2"
python-texttools = ">=0.0.3"
pyyaml = "*"
rich = "*"
uvicorn = "*"
wsgidav = "*"

[tool.poetry.scripts]
p115dav = "p115dav.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115dav"
