[tool.poetry]
name = "p115ftp"
version = "0.0.4.1"
description = "Python 115 FTP Server."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115ftp"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115ftp"
keywords = ["python", "115", "FTP"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
cachedict = ">=0.0.7"
errno2 = ">=0.0.3"
p115client = ">=0.0.7.7"
pyftpdlib = "*"
rich = "*"
yarl = "*"

[tool.poetry.scripts]
p115ftp = "p115ftp.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115ftp"
