[tool.poetry]
name = "p115fuse"
version = "0.0.3.1"
description = "Python 115 FUSE mount"
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115fuse"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115fuse"
keywords = ["python", "115", "FUSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
cachedict = ">=0.0.7"
mfusepy = "*"
orjson = "*"
p115client = ">=0.0.7.7"
python-httpfile = ">=0.0.5.4"
rich = "*"
yarl = "*"

[tool.poetry.scripts]
p115fuse = "p115fuse.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115fuse"
