[tool.poetry]
name = "p115nano302"
version = "0.1.3.1"
description = "115 nano 302 backend."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115nano302"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115nano302"
keywords = ["python-115", "302", "backend"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
blacksheep = "*"
blacksheep_client_request = ">=0.1.2"
blacksheep-rich-log = ">=0.0.2"
cachedict = ">=0.0.6"
orjson = "*"
p115rsacipher = ">=0.0.1"
p115pickcode = ">=0.0.5.4"
python-dicttools = ">=0.0.5"
pyyaml = "*"
uvicorn = "*"

[tool.poetry.scripts]
p115nano302 = "p115nano302.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115nano302"
