[tool.poetry]
name = "p115oss"
version = "0.1.2"
description = "115 oss upload."
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115oss"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115oss"
keywords = ["python-115", "oss", "upload"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
http_response = ">=0.0.9"
integer_tool = ">=0.0.6.1"
orjson = "*"
p115cipher = ">=0.0.5.4"
p115pickcode = ">=0.0.5.4"
python-asynctools = ">=0.2.2"
python-dicttools = ">=0.0.5"
python-filewrap = ">=0.3.1.1"
python-hashtools = ">=0.0.6"
python-http_request = ">=0.1.7.1"
python-iterutils = ">=0.3.1.1"
urllib3_future_request = ">=0.0.2"
yarl = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115oss"
