[tool.poetry]
name = "p115servedb"
version = "0.0.5.7"
description = "115 网盘基于 p115updatedb 导出数据库的挂载服务"
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115servedb"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115servedb"
keywords = ["python-115", "servedb"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
a2wsgi = ">=1.10.7"
blacksheep = "*"
cachedict = ">=0.0.6"
fusepy = "*"
httpagentparser = "*"
orjson = "*"
p115client = ">=0.0.5.18"
p115updatedb = ">=0.0.12"
path_predicate = ">=0.0.1.1"
posixpatht = ">=0.0.3"
pysubs2 = "*"
python-encode_uri = ">=0.0.3"
python-httpfile = ">=0.0.5"
python-property = ">=0.0.3"
pyyaml = "*"
urllib3 = "*"
uvicorn = "*"
wsgidav = "*"

[tool.poetry.scripts]
p115servedb = "p115servedb.__main__:main"
115servedb = "p115servedb.__main__:main"
115servedb-dav = "p115servedb.dav:main"
115servedb-fuse = "p115servedb.fuse:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115servedb"
