[tool.poetry]
name = "p115updatedb"
version = "0.0.12.3"
description = "把 115 网盘的文件列表导出到数据库"
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115updatedb"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115updatedb"
keywords = ["python-115", "updatedb"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
orjson = "*"
p115client = ">=0.0.7.2"
posixpatht = ">=0.0.4"
python-concurrenttools = ">=0.1.0"
python-iterutils = ">=0.2.5.4"
sqlitetools = ">=0.0.3.2"

[tool.poetry.scripts]
p115updatedb = "p115updatedb.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115updatedb"
