[tool.poetry]
name = "p115wsgidav"
version = "0.0.3.4"
description = "Python 115 WsgiDAV"
authors = ["ChenyangGao <wosiwujm@gmail.com>"]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115wsgidav"
repository = "https://github.com/ChenyangGao/p115client/tree/main/modules/p115wsgidav"
keywords = ["python", "115", "WsgiDAV"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
include = [
    "LICENSE",
]

[tool.poetry.dependencies]
python = "^3.12"
cachedict = ">=0.0.7"
p115client = ">=0.0.7.7"
pyyaml = "*"
wsgidav = "*"
yarl = "*"

[tool.poetry.scripts]
p115wsgidav = "p115wsgidav.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.packages]]
include = "p115wsgidav"
